--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
   google_fonts: ^4.0.3
   sentiment_dart: ^0.0.5
   shimmer: ^2.0.0
   carousel_slider: ^4.2.1
+  firebase_core: ^1.10.6
+  firebase_auth: ^3.3.4
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+  google_sign_in: ^5.2.1
+  email_validator: ^2.0.1
+  firebase_core_platform_interface: 4.5.1
+  firebase_storage: ^10.3.11
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +86,9 @@ flutter:
     - assets/images/gallo/umar.png
     - assets/images/gallo/vera.png
     - assets/images/gallo/yan.png
+    - assets/images/pngegg.png
+    - assets/images/separatore.png
+    - assets/images/octagon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
