--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,16 @@ dependencies:
   sentiment_dart: ^0.0.5
   shimmer: ^2.0.0
   carousel_slider: ^4.2.1
-  firebase_core: ^1.10.6
-  firebase_auth: ^3.3.4
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
   equatable: ^2.0.3
   flutter_bloc: ^8.0.1
-  google_sign_in: ^5.2.1
+  google_sign_in: ^6.0.2
   email_validator: ^2.0.1
-  firebase_core_platform_interface: 4.5.1
-  firebase_storage: ^10.3.11
+  firebase_storage: ^11.0.16
+  rxdart: ^0.27.7
+  firebase_core_platform_interface:
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +91,8 @@ flutter:
     - assets/images/pngegg.png
     - assets/images/separatore.png
     - assets/images/octagon.png
+    - assets/images/allenamento.png
+    - assets/images/usa_map.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
