--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,13 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   equatable: ^2.0.3
-  flutter_bloc: ^8.0.1
   google_sign_in: ^6.0.2
   email_validator: ^2.0.1
   firebase_storage: ^11.0.16
   rxdart: ^0.27.7
   firebase_core_platform_interface:
   connectivity: ^3.0.6
+  flutter_riverpod: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +93,7 @@ flutter:
     - assets/images/octagon.png
     - assets/images/allenamento.png
     - assets/images/usa_map.png
+    - assets/images/palestra.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
