--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,10 @@ dependencies:
   email_validator: ^2.0.1
   firebase_storage: ^11.0.16
   rxdart: ^0.27.7
-  firebase_core_platform_interface:
+  firebase_core_platform_interface: ^4.5.1
   connectivity: ^3.0.6
   flutter_riverpod: ^2.3.2
+  hooks_riverpod: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +95,7 @@ flutter:
     - assets/images/allenamento.png
     - assets/images/usa_map.png
     - assets/images/palestra.png
+    - assets/images/bckg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
