--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,43 +28,39 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^4.2.1
+  connectivity: ^3.0.6
+  cupertino_icons: ^1.0.2
+  email_validator: ^2.0.1
+  equatable: ^2.0.5
+  firebase_auth: ^4.3.0
+  firebase_core: ^2.8.0
+  firebase_core_platform_interface: ^4.5.1
+  firebase_storage: ^11.0.16
+  flame: ^1.7.1
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  http: ^0.13.4
+  flutter_riverpod: ^2.3.2
   google_fonts: ^4.0.3
+  google_sign_in: ^6.0.2
+  hooks_riverpod: ^2.3.2
+  http: ^0.13.4
+  rxdart: ^0.27.7
   sentiment_dart: ^0.0.5
   shimmer: ^2.0.0
-  carousel_slider: ^4.2.1
-  firebase_core: ^2.8.0
-  firebase_auth: ^4.3.0
-  equatable: ^2.0.3
-  google_sign_in: ^6.0.2
-  email_validator: ^2.0.1
-  firebase_storage: ^11.0.16
-  rxdart: ^0.27.7
-  firebase_core_platform_interface: ^4.5.1
-  connectivity: ^3.0.6
-  flutter_riverpod: ^2.3.2
-  hooks_riverpod: ^2.3.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -94,15 +90,19 @@ flutter:
     - assets/images/octagon.png
     - assets/images/allenamento.png
     - assets/images/usa_map.png
-    - assets/images/palestra.png
+    - assets/images/palestre/AKA_Logo.png
+    - assets/images/palestre/att-logo.png
+    - assets/images/palestre/jw.png
+    - assets/images/palestre/Kings_MMA_Logo.png
+    - assets/images/palestre/mmalab.png
+    - assets/images/palestre/sanford-mma.png
     - assets/images/bckg.png
-
+    - assets/images/modelli/mma_ufcman.obj
+    - assets/images/punching-bag.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
