--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ flutter:
     - assets/images/modelli/mma_ufcman.obj
     - assets/images/punching-bag.png
     - assets/images/G_Logo.png
+    - assets/images/body-registration.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
