--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   rxdart: ^0.27.7
   sentiment_dart: ^0.0.5
   shimmer: ^2.0.0
+  
+  
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -58,6 +60,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -101,6 +104,7 @@ flutter:
     - assets/images/punching-bag.png
     - assets/images/G_Logo.png
     - assets/images/body-registration.jpg
+    - assets/images/recover_password.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
